SASS build system

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="utf-8">
     <title>IPBX CDR</title>
     <script type="text/javascript" src="dist/out.js"></script>
-    <link href="bower_components/c3/c3.css" rel="stylesheet" type="text/css" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="dist/style.css" rel="stylesheet" />
+    <link href="lib/c3/c3.css" rel="stylesheet" type="text/css" />
     <!-- Table sorter -->
-    <link href="bower_components/jquery.tablesorter/css/theme.default.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="bower_components/jquery.tablesorter/js/jquery.tablesorter.js"></script>
-    <script type="text/javascript" src="bower_components/jquery.tablesorter/js/jquery.tablesorter.widgets.js"></script>
-    <script type="text/javascript" src="bower_components/jquery.tablesorter/js/widgets/widget-columnSelector.js"></script>
-    <script type="text/javascript" src="bower_components/jquery.tablesorter/js/widgets/widget-pager.js"></script>
-    <script type="text/javascript" src="bower_components/jquery.tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.6/select2.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.6/select2.min.js"></script>
-    <script type="text/javascript" src="bower_components/jquery.tablesorter/js/widgets/widget-filter-formatter-select2.js"></script>
+    <link href="lib/jquery.tablesorter/css/theme.default.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="lib/jquery.tablesorter/js/jquery.tablesorter.js"></script>
+    <script type="text/javascript" src="lib/jquery.tablesorter/js/jquery.tablesorter.widgets.js"></script>
+    <script type="text/javascript" src="lib/jquery.tablesorter/js/widgets/widget-columnSelector.js"></script>
+    <script type="text/javascript" src="lib/jquery.tablesorter/js/widgets/widget-pager.js"></script>
+    <script type="text/javascript" src="lib/jquery.tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.tablesorter/js/widgets/widget-filter-formatter-select2.js"></script>
+    <script type="text/javascript" src="lib/select2/select2.js"></script>
 </head>
 
 <body>
