--- a/pages/list.html
+++ b/pages/list.html
@@ -1,27 +1,27 @@
 <h2>Call list</h2>
 <table data-stat="table">
     <thead>
-        <th data-priority="critical" data-fieldname="calldate" data-sort="1">Date</th>
-        <th data-priority="critical" data-fieldname="clid">Caller ID</th>
-        <th data-priority="2" data-fieldname="src">Source</th>
-        <th data-priority="critical" data-fieldname="dst">Destination</th>
-        <th data-priority="critical" data-fieldname="duration">Duration</th>
-        <th data-priority="4" data-fieldname="billsec">Billed</th>
-        <th data-priority="3" data-fieldname="picktime">Pick up time</th>
-        <th data-priority="3" data-fieldname="disposition" data-searcher="select2">Disposition</th>
-        <th data-priority="2" data-fieldname="lastapp" data-searcher="select2">Last Application</th>
-        <th data-priority="3" data-fieldname="domain" data-searcher="select2">Domain</th>
-        <th data-priority="3" data-fieldname="lastdata">Last data</th>
-        <th data-priority="4" data-fieldname="dcontext" data-searcher="select2">Context</th>
-        <th data-priority="4" data-fieldname="sequence">Sequence</th>
-        <th data-priority="4" data-fieldname="uniqueid">Unique ID</th>
-        <th data-priority="4" data-fieldname="linkedid">Linked ID</th>
-        <th data-priority="5" data-fieldname="channel">Channel</th>
-        <th data-priority="5" data-fieldname="dstchannel">DST Channel</th>
-        <th data-priority="6" data-fieldname="amaflags">AMAFLAGS</th>
-        <th data-priority="6" data-fieldname="accountcode">Account Code</th>
-        <th data-priority="6" data-fieldname="userfield">Userfield</th>
-        <th data-priority="6" data-fieldname="peeraccount">Peer account</th>
+        <th data-fieldname="calldate" data-sort="1">Date</th>
+        <th data-fieldname="clid">Caller ID</th>
+        <th data-fieldname="src">Source</th>
+        <th data-fieldname="dst">Destination</th>
+        <th data-fieldname="duration">Duration</th>
+        <th data-fieldname="billsec">Billed</th>
+        <th data-fieldname="picktime">Pick up time</th>
+        <th data-fieldname="disposition">Disposition</th>
+        <th data-fieldname="lastapp">Last Application</th>
+        <th data-fieldname="domain">Domain</th>
+        <th data-fieldname="lastdata">Last data</th>
+        <th data-fieldname="dcontext">Context</th>
+        <th data-fieldname="sequence" class="columnSelector-false">Sequence</th>
+        <th data-fieldname="uniqueid" class="columnSelector-false">Unique ID</th>
+        <th data-fieldname="linkedid" class="columnSelector-false">Linked ID</th>
+        <th data-fieldname="channel" class="columnSelector-false">Channel</th>
+        <th data-fieldname="dstchannel" class="columnSelector-false">DST Channel</th>
+        <th data-fieldname="amaflags" class="columnSelector-false">AMAFLAGS</th>
+        <th data-fieldname="accountcode" class="columnSelector-false">Account Code</th>
+        <th data-fieldname="userfield" class="columnSelector-false">Userfield</th>
+        <th data-fieldname="peeraccount" class="columnSelector-false">Peer account</th>
     </thead>
     <tbody>
     </tbody>
