--- a/pages/overview.html
+++ b/pages/overview.html
@@ -80,6 +80,8 @@
                     </li>
                 </ul>
             </div>
+            <h4>Calls</h4>
+            <div data-field="duration" data-stat="timeseries"></div>
         </div>
     </div>
 </div>
