--- a/pages/dst.html
+++ b/pages/dst.html
@@ -1,5 +1,5 @@
-<div class="srcFilter">
-    <h3>Emitted calls</h3>
+<div class="dstFilter">
+    <h3>Received calls</h3>
     <div class="row">
         <div class="col-xs-6">
             <h4>Duration</h4>
